hphp/test/slow/await_as_an_expression/error/pipe2.php.expectf

Fatal error: Await cannot be used as an expression right of a pipe operator. in %s/pipe2.php on line 6
